Upgrade codebase to Java 17